@@ -9,6 +9,7 @@ Generic changes/fixes
 	
 Device specific changes/fixes
 	* iChargerUSB - enable program memory control
+	* iChargerUSB - correct power calculation for opened files (*.osd)
 	* GPS_Logger* - fix latitude, longitude unit which caused display problem while activated
 	* Spektrum-Telemetry - make frame loss and holds always visible, even no reasonable data
 
